[package]
name = "defender-control"
version = "420.3.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
eframe = "0.34.3"
rfd = "0.17.2"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.56.0"

[build-dependencies]
embed-manifest = "1.5.0"
embed-resource = "3.0.9"

# Lean, self-contained release binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
